--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
-DOCS_JSON='{"doc1":"val1","doc2":"val2"}'
+DOCS_JSON='[{"id":"000001","title":"To Kill a Bird Mocking", "type":"How-to Guide", "format":"Markdown", "URI":"http:\\localhost:9090"}, {"id":"000002","title":"Super Code Walk-through", "type":"Tutorial", "format":"HTML", "URI":"http:\\localhost:2020"}]'
 SOME_VAR="slick willy was here"
+
+ID     string `json:"id"`
+Title  string `json:"title"`
+Type   string `json:"type"`
+Format string `json:"format"`
+URI    string `json:"URI"`
+Tags   string `json:"tags"`
+
+{"id":"000002","title":"Super Code Walk-through", "type":"Tutorial", "format":"HTML", "URI":"http:\\localhost:2020"}
