ready for testing on cluster

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DOCS_JSON='[{"id":"000001","title":"To Kill a Bird Mocking", "type":"How-to Guide", "format":"Markdown", "URI":"http:\\localhost:9090"}, {"id":"000002","title":"Super Code Walk-through", "type":"Tutorial", "format":"HTML", "URI":"http:\\localhost:2020"}]'
+docs_json='[{"id":"000001","title":"To Kill a Bird Mocking", "type":"How-to Guide", "format":"Markdown", "URI":"http:\\localhost:9090"}, {"id":"000002","title":"Super Code Walk-through", "type":"Tutorial", "format":"HTML", "URI":"http:\\localhost:2020"}]'
 SOME_VAR="slick willy was here"
 
 ID     string `json:"id"`
