added markdown rendering

--- a/.env
+++ b/.env
@@ -1,11 +1,2 @@
-docs_json='[{"id":"000001","title":"To Kill a Bird Mocking", "type":"How-to Guide", "format":"Markdown", "URI":"http:\\localhost:9090"}, {"id":"000002","title":"Super Code Walk-through", "type":"Tutorial", "format":"HTML", "URI":"http:\\localhost:2020"}]'
+docs_json='[{"id":"ps_readme","title":"Petstore Readme", "type":"README", "format":"markdown", "URI":"https://raw.githubusercontent.com/OpenAPITools/openapi-petstore/master/README.md"}, {"id":"carat_yaml","title":"OpenAPI for Carat API", "type":"OAS", "format":"yaml", "URI":"https://raw.githubusercontent.com/OpenAPITools/openapi-generator/master/modules/openapi-generator/src/test/resources/2_0/petstore.yaml"},{"id":"000001","title":"To Kill a Bird Mocking", "type":"How-to Guide", "format":"Markdown", "URI":"http:\\localhost:9090"}, {"id":"000002","title":"Super Code Walk-through", "type":"Tutorial", "format":"HTML", "URI":"http:\\localhost:2020"}]'
 SOME_VAR="slick willy was here"
-
-ID     string `json:"id"`
-Title  string `json:"title"`
-Type   string `json:"type"`
-Format string `json:"format"`
-URI    string `json:"URI"`
-Tags   string `json:"tags"`
-
-{"id":"000002","title":"Super Code Walk-through", "type":"Tutorial", "format":"HTML", "URI":"http:\\localhost:2020"}
